# derive_is_enum_variant

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
